@@ -1,0 +1,56 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 1999-2003 Kasper Skårhøj (kasperYYYY@typo3.com)
+*  (c) 2004-2009 Stanislas Rolland (stanislas.rolland@sjbr.ca)
+*  All rights reserved
+*
+*  This script is part of the Typo3 project. The Typo3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*  A copy is found in the textfile GPL.txt and important notices to the license
+*  from the author is found in LICENSE.txt distributed with these scripts.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+/**
+ *
+ * Front End creating/editing/deleting records authenticated by fe_user login.
+ * A variant restricted to front end user self-registration and profile maintenance, with a number of enhancements (see the manual).
+ *
+ * @author	Kasper Skårhøj <kasperYYYY@typo3.com>
+ * @author	Stanislas Rolland <stanislas.rolland(arobas)sjbr.ca>
+ * @author	Franz Holzinger <franz@ttproducts.de>
+ * @maintainer	Franz Holzinger <franz@ttproducts.de>
+ *
+ *
+ */
+ 
+use TYPO3\CMS\Core\Utility\GeneralUtility;
+
+class tx_agency {
+    public $cObj;
+
+    public function main($content, $conf) {
+        $pibaseObj = GeneralUtility::makeInstance(JambageCom\Agency\Controller\RegisterPluginController::class);
+        $pibaseObj->cObj = $this->cObj;
+        $content = $pibaseObj->main($content, $conf);
+        return $content;
+    }
+}
+
+if (defined('TYPO3_MODE') && $GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/' . AGENCY_EXT . '/class.tx_agency.php']) {
+    include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/' . AGENCY_EXT . '/class.tx_agency.php']);
+}
+
