@@ -1,3 +1,8 @@
+
+
+2018-11-24 Franz Holzinger  <franz@ttproducts.de>
+    * Readd file class.tx_agency.php which is needed until TYPO3 7.6 for addPItoST43.
+
 2018-11-13 Franz Holzinger  <franz@ttproducts.de>
     * Fix PHP syntax error
 
